--- a/src/page1.html
+++ b/src/page1.html
@@ -38,6 +38,14 @@
                     <img src="./robot area.png" alt="">
                 </div>
             </section>
+            <section class="flex justify-between items-center flex-wrap p-[20px]">
+                <img src="./Logo.png" alt="">
+                <img src="./Logo (1).png" alt="">
+                <img src="./Logo (2).png" alt="">
+                <img src="./Logo (3).png" alt="">
+                <img src="./Logo (4).png" alt="">
+                <img src="./Logo (5).png" alt="">
+            </section>
         </header>
     </body>
 </html>
