--- a/src/page1.html
+++ b/src/page1.html
@@ -47,5 +47,66 @@
                 <img src="./Logo (5).png" alt="">
             </section>
         </header>
+
+        <main class="max-w-[1200px] m-auto bg-black text-white">
+            <section class="p-[20px] py-[40px] flex-col ">
+                <h2 class="text-center text-[30px] ">Our Ultimate Set of Services for Your <br> Ideas Implementation</h2>
+                <div class="flex flex-col gap-[20px] m-auto lg:flex-row lg:justify-between mt-[40px]">
+                    <div class="w-[320px] h-[420px] m-auto rounded-xl gap-[15px] flex flex-col  items-center bg-[#555]">
+                        <img src="./pict1.png" alt="">
+                        <h4 class="text-[25px] font-bold'">Predictive Analytics</h4>
+                        <p class="text-center text-[18px]">Forecast trends and make data-driven decisions with our advanced ML models.</p>
+                    </div>
+
+                    <div class="w-[320px] h-[420px] m-auto rounded-xl gap-[15px] flex flex-col  items-center bg-[#555]">
+                        <img src="./pict2.png" alt="">
+                        <h4 class="text-[25px] font-bold'">AI Consulting</h4>
+                        <p class="text-center text-[18px]">Expert guidance on implementing AI solutions for your business needs.</p>
+                    </div>
+
+                    <div class="w-[320px] h-[420px] m-auto rounded-xl gap-[15px] flex flex-col  items-center bg-[#555]">
+                        <img src="./pict3.png" alt="">
+                        <h4 class="text-[25px] font-bold'">Data Engineering</h4>
+                        <p class="text-center text-[18px]">Build robust data pipelines and infrastructure for ML operations.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="py-[30px]">
+                <div class="w-[400px] lg:w-[700px] m-auto flex flex-col gap-[15px]">
+                    <h2 class="text-[25px] font-bold text-center">Frequently Asked Questions</h2>
+                    <div class="flex gap-[15px] bg-[#555] rounded-xl p-[20px]">
+                        <p class=" p-[5px] text-blue-400 text-[40px] font-bold">01</p>
+                        <div class="flex flex-col gap-[10px]">
+                            <div class="flex justify-between items-center">
+                                <p class="text-blue-400 text-[18px]">What services does Catalyst Analytics provide?</p>
+                                <img src="./Union.png" alt="">
+                            </div>
+                            <p class="text-[12px] lg:text-[16px]" >Catalyst Analytics offers a range of services including design, engineering, and project management. We specialize in user experience design, web development, mobile app development, custom software development, branding and identity, and more.</p>
+                        </div>
+                    </div>
+
+                    <div class="p-[15px] flex justify-between items-center bg-[#555] rounded-xl">
+                        <p class="text-[40px] font-bold">02</p>
+                        <p class="text-[12px] lg:text-[18px]">Lorem Ipsum is simply dummy text of the printing </p>
+                        <p class="text-[30px]">+</p>
+                    </div>
+                    <div class="p-[15px] flex justify-between items-center bg-[#555] rounded-xl">
+                        <p class="text-[40px] font-bold">03</p>
+                        <p class="text-[12px] lg:text-[18px]">Lorem Ipsum is simply dummy text of the printing </p>
+                        <p class="text-[30px]">+</p>
+                    </div>
+                    <div class="p-[15px] flex justify-between items-center bg-[#555] rounded-xl">
+                        <p class="text-[40px] font-bold">04</p>
+                        <p class="text-[12px] lg:text-[18px]">Lorem Ipsum is simply dummy text of the printing </p>
+                        <p class="text-[30px]">+</p>
+                    </div>
+                    <div class="p-[15px] flex justify-between items-center bg-[#555] rounded-xl">
+                        <p class="text-[40px] font-bold">05</p>
+                        <p class="text-[12px] lg:text-[18px]">Lorem Ipsum is simply dummy text of the printing </p>
+                        <p class="text-[30px]">+</p>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
