--- a/src/page2.html
+++ b/src/page2.html
@@ -34,5 +34,242 @@
                 </div>
             </section>
         </header>
+
+        <main class="max-w-[1200px] flex flex-col gap-[20px] m-auto mt-[20px] py-[30px]">
+            <h2 class="text-[40px] text-center font-bold">Our Services</h2>
+            <p class="text-[20px] text-center">Comprehensive AI, blockchain, and analytics solutions powered by deep expertise in machine <br> learning and data engineering</p>
+            <div class=" flex flex-col gap-[20px] lg:flex-row lg:justify-between">
+                <div class="flex flex-col gap-[10px] py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture1.png" alt="">
+                    <h3 class="text-[20px] text-center">Algorithmic Trading</h3>
+                    <p class="text-[18px] text-center">Advanced trading algorithms and systems leveraging ML for market analysis and automated execution.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+
+                <div class="flex flex-col gap-[10px] py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture2.png" alt="">
+                    <h3 class="text-[20px] text-center">Blockchain Development</h3>
+                    <p class="text-[18px] text-center">End-to-end blockchain solutions from smart contract development to  decentralized application architecture.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl ">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+                
+            </div>
+            <div class=" flex flex-col gap-[20px] lg:flex-row lg:justify-between">
+                <div class="flex flex-col gap-[10px] py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture3.png" alt="">
+                    <h3 class="text-[20px] text-center">Algorithmic Trading</h3>
+                    <p class="text-[18px] text-center">Advanced trading algorithms and systems leveraging ML for market analysis and automated execution.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+
+                <div class="flex flex-col gap-[10px]  py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture4.png" alt="">
+                    <h3 class="text-[20px] text-center">Data Engineering</h3>
+                    <p class="text-[18px] text-center">Build robust data infrastructure that scales with your business needs using modern data engineering practices.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl ">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+            </div>
+            <div class=" flex flex-col gap-[20px] lg:flex-row lg:justify-between">
+                <div class="flex flex-col gap-[10px] py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture5.png" alt="">
+                    <h3 class="text-[20px] text-center">Predictive Analytics</h3>
+                    <p class="text-[18px] text-center">Transform your data into actionable insights with our advanced predictive modeling and forecasting solutions.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+
+                <div class="flex flex-col gap-[10px]  py-[20px] items-center w-[400px] m-auto lg:w-[500px] p-[15px] bg-[#555] rounded-xl">
+                    <img src="./picture6.png" alt="">
+                    <h3 class="text-[20px] text-center">MLOps & Infrastructure</h3>
+                    <p class="text-[18px] text-center">Enterprise-grade infrastructure for deploying and managing ML models in production environments.</p>
+                    <div class="flex  justify-between gap-[10px]">
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Performance optimization</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Trading strategy development</p>
+                            </div>
+                            <div class="flex gap-[10px] items-center">
+                                <img src="./dot.png" alt="">
+                                <p class="text-[12px]">Market analysis algorithms</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="border-[1px] border-solid border-blue-400 rounded-xl ">
+                        <div class="px-[15px] py-[10px] flex gap-[10px] items-center ">
+                            <img src="./Vector (Stroke).png" alt="">
+                            <p class="text-gray-400">Book a Call</p>
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
