--- a/src/page4.html
+++ b/src/page4.html
@@ -24,6 +24,16 @@
                 <button class="hidden lg:flex py-[10px] px-[20px] text-[20px] text-white bg-blue-400 rounded-xl">Contact Us</button>
                 <p class=" lg:hidden text-[25px]">☰</p>
             </nav>
+            <section class="flex flex-col  lg:flex-row lg:justify-between items-center rounded-xl">
+                <div class="flex flex-col justify-center gap-[20px] w-[400px] m-auto  lg:w-[700px] h-[400px] p-[20px] rounded-xl">
+                    <h2 class="text-[35px] font-bold">Contact Us</h2>
+                    <p class="text-gray-400">Get in touch with our team to discuss how we can help transform your business. We’re here to help.</p>
+                    <button class="w-[250px] items-center justify-center flex py-[10px] px-[20px] text-[20px] text-white bg-blue-400 rounded-xl">Get In Touch Now</button>
+                </div>
+                <div class="flex w-[400px] h-[400px] items-center justify-between">
+                    <img src="./mess.png" alt="">
+                </div>
+            </section>
         </header>
     </body>
 </html>
