--- a/src/page4.html
+++ b/src/page4.html
@@ -35,5 +35,46 @@
                 </div>
             </section>
         </header>
+
+        <main class="flex flex-col lg:flex-row lg:justify-between gap-[15px] max-w-[1200px] m-auto bg-black text-white">
+            <div class="flex flex-col gap-[10px] w-[400px] m-auto items-center">
+                <h2 class="text-[25px] font-bold">Send Us a Message</h2>
+                <div class="flex w-[300px] gap-[10px] ">
+                    <input class="bg-gray-100 w-[190px] texy-[18px] py-[10px] px-[15px] text-gray-400 flex items-center" type="text" placeholder="First Name">
+                    <input class="bg-gray-100 w-[190px] texy-[18px] py-[10px] px-[15px] text-gray-400 flex items-center" type="text" placeholder="Last Name">
+                </div>
+                <input class="bg-gray-100 w-[400px] text-[18px] py-[10px] px-[15px] text-gray-400 flex items-center" type="email" placeholder="Email">
+                <input class="bg-gray-100 w-[400px] text-[18px] py-[10px] px-[15px] text-gray-400 flex items-center" type="text" placeholder="Company">
+                <button class="w-[400px] flex items-center justify-center py-[10px] px-[20px] text-[20px] text-white bg-blue-400 rounded-xl">Contact Us</button>
+            </div>
+
+            <div class="w-[400px] m-auto">
+                <h2 class="text-[25px] font-bold">Contact Information</h2>
+                <div class="flex gap-[10px] items-center">
+                    <img class="w-[20px] h-[20px]" src="./Icon1.png" alt="">
+                    <div class="flex flex-col gap-[10px]">
+                        <p class="text-[18px]">Email</p>
+                        <p class="text-[18px] text-gray-400">contact@catalystanalytics.io</p>
+                    </div>
+                </div>
+                <div class="flex gap-[10px] items-center">
+                    <img class="w-[20px] h-[20px]" src="./Icon2.png" alt="">
+                    <div class="flex flex-col gap-[10px]">
+                        <p class="text-[18px]">Phone</p>
+                        <p class="text-[18px] text-gray-400">(469) 712-4672</p>
+                    </div>
+                </div>
+                <div class="flex gap-[10px] items-center">
+                    <img class="w-[10px] h-[10px]" src="./Icon3.png" alt="">
+                    <div class="flex flex-col gap-[10px]">
+                        <p class="text-[18px]">Office</p>
+                        <p class="text-[18px] text-gray-400">5511 Parkcrest Dr, Suite 103</p>
+                        <p class="text-[18px] text-gray-400">Austin, TX 78731</p>
+                        <p class="text-[18px] text-gray-400">United States</p>
+                    </div>
+                </div>
+                
+            </div>
+        </main>
     </body>
 </html>
