--- a/src/page4.html
+++ b/src/page4.html
@@ -76,5 +76,46 @@
                 
             </div>
         </main>
+
+        <footer class="flex flex-col gap-[15px] max-w-[1200px] m-auto bg-black text-white py-[20px]">
+            <nav class=" mt-[10px] flex items-center justify-between p-[20px]">
+                <div class="flex gap-[10px] items-center">
+                    <img src="./calogo1 1.png" alt="">
+                    <p class="text-[20px] font-bold">Catalyst  <br>Analytics</p>
+                </div>
+
+                <ul class="hidden lg:flex gap-[20px] text-[20px]">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Career</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+
+                <img class="hidden lg:flex" src="./Sub Container.png" alt="">
+            </nav>
+            <div class="hidden lg:flex items-center justify-between">
+                <div class="flex gap-[20px] items-center">
+                    <div class="flex items-center gap-[10px]">
+                        <img src="./Icon1.png" alt="">
+                        <p class="text-[14px]">contact@catalystanalytics.io</p>
+                    </div>
+                    <div class="flex items-center gap-[10px]">
+                        <img src="./Icon2.png" alt="">
+                        <p class="text-[14px]">+1 (469) 712-4672</p>
+                    </div>
+                    <div class="flex items-center gap-[10px]">
+                        <img src="./Icon3.png" alt="">
+                        <p class="text-[14px]">5511 Parkcrest Dr, Suite 103, Austin, TX 78731</p>
+                    </div>
+                </div>
+                <div class="flex gap-[15px]">
+                    <p class="text-gray-400">Privacy Policy</p>
+                    <p class="text-gray-400">Terms of Service</p>
+                </div>
+            </div>
+            <div class="flex items-center justify-center ">
+                <p class="text-[14px] text-gray-400">© 2025 Catalyst Analytics. All rights reserved.</p>
+            </div>
+        </footer>
     </body>
 </html>
