--- a/src/page3.html
+++ b/src/page3.html
@@ -25,5 +25,15 @@
                 <p class=" lg:hidden text-[25px]">☰</p>
             </nav>
         </header>
+        <section class="flex flex-col  lg:flex-row lg:justify-between items-center rounded-xl">
+                <div class="flex flex-col justify-center gap-[20px] w-[400px] m-auto  lg:w-[700px] h-[400px] p-[20px] rounded-xl">
+                    <h2 class="text-[35px] font-bold">Build the Future with Us</h2>
+                    <p class="text-gray-400">We’re a team of builders, thinkers, and explorers using AI, machine learning, and <br> blockchain to solve meaningful problems.</p>
+                    <button class="w-[250px] lg:flex py-[10px] px-[20px] text-[20px] text-white bg-blue-400 rounded-xl">Explore Open Positions</button>
+                </div>
+                <div class="flex w-[400px] h-[400px] items-center justify-between">
+                    <img src="./bag.png" alt="">
+                </div>
+            </section>
     </body>
 </html>
