--- a/src/page1.html
+++ b/src/page1.html
@@ -15,10 +15,10 @@
                 </div>
 
                 <ul class="hidden lg:flex gap-[20px] text-[20px]">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Services</a></li>
+                    <li><a href="./page1.html">Home</a></li>
+                    <li><a href="./page2.html">Services</a></li>
                     <li><a href="">Career</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="./page4.html">Contact</a></li>
                 </ul>
 
                 <button class="hidden lg:flex py-[10px] px-[20px] text-[20px] text-white bg-blue-400 rounded-xl">Contact Us</button>
